# callme

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: android.yml  ci.yml  release-android.yml  release.yml
callme/: Cargo.toml
callme-cli/: Cargo.toml  README.md
callme-cli/src/: main.rs
callme-egui/: Cargo.toml  README.md  android-vars.sh  build-ios.py  manifest.yaml
callme-egui/src/: app.rs  lib.rs  main.rs
callme-web/: .gitignore  Cargo.toml  README.md  package.json
callme-web/public/: index.html  main.js
callme-web/src/: lib.rs  wasm.rs
callme/examples/: echo.rs  file.rs  file2.rs  playback-record.rs
callme/src/: audio.rs  audio2.rs  audio3.rs  codec.rs  lib.rs  net.rs  rtc.rs  run.rs
callme/src/audio/: capture.rs  debug.rs  device.rs  play.rs  playback.rs  processor.rs  record.rs
callme/src/audio3/: processor.rs
callme/src/codec/: opus.rs
callme/src/rtc/: protocol_handler.rs  rtp_receiver.rs  rtp_sender.rs
