[workspace]
resolver = "2"
members = ["callme", "callme-cli", "callme-egui", "callme-web"]

# [patch."https://github.com/dignifiedquire/iroh-roq.git"]
# iroh-roq = { git = "https://github.com/Frando/iroh-roq.git", branch = "Frando/dev" }
# iroh-roq = { path = "../iroh-roq" }

# this is needed for compiling to wasm
#[patch.crates-io]
# webrtc-util = { git = "https://github.com/Frando/webrtc.git", branch = "fix/util-feature-flags" }

# debugging
# [patch.crates-io]
# iroh-quinn = { path = "../iroh-quinn/quinn" }
# iroh-quinn-proto = { path = "../iroh-quinn/quinn-proto" }
# iroh-quinn-udp = { path = "../iroh-quinn/quinn-udp" }

[patch.crates-io]
webrtc-audio-processing = { path = "../webrtc-audio-processing" }
iroh-roq = { path = "../iroh-roq" }
cpal = { path = "../cpal" }
