
[workspace]
resolver = "2"
members = ["callme", "callme-cli", "callme-egui", "callme-web"]

[workspace.package]
authors = ["Frando <franz@n0.computer>", "n0 team"]
repository = "https://github.com/n0-computer/callme.git"
license = "MIT OR Apache-2.0"

[patch.crates-io]
# dial down logging:
iroh-roq = { git = "https://github.com/Frando/iroh-roq.git", branch = "fix/less-logs" }
# fix android device names: https://github.com/RustAudio/cpal/pull/959
cpal = { git = "https://github.com/Frando/cpal.git", branch = "feat/android-device-name" }

# fix android build: https://github.com/tonarino/webrtc-audio-processing/pull/47
webrtc-audio-processing = { git = "https://github.com/Frando/webrtc-audio-processing.git", branch = "fix/android-build" }
webrtc-audio-processing-sys = { git = "https://github.com/Frando/webrtc-audio-processing.git", branch = "fix/android-build" }
# webrtc-audio-processing-sys = { path = "../webrtc-audio-processing/webrtc-audio-processing-sys" }
# webrtc-audio-processing = { path = "../webrtc-audio-processing" }
#
# this is needed for compiling to wasm
# webrtc-util = { git = "https://github.com/Frando/webrtc.git", branch = "fix/util-feature-flags" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
