[package]
name = "callme-egui"
version = "0.1.0"
edition = "2021"
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "make voicecalls over iroh (gui app)"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.96"
async-channel = "2.3.1"
eframe = "0.31"
egui = { version = "0.31.0", default-features = false, features = [
    "color-hex",
] }
iroh = { version = "0.33.0", default-features = false }
callme = { version = "0.1.0", path = "../callme" }
n0-future = "0.1.2"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
strum = { version = "0.27.1", features = ["derive"] }

[target.'cfg(target_os = "android")'.dependencies]
android_clipboard = "0.1.0"
tracing-android = "0.2"
eframe = { version = "0.31", default-features = false, features = [
    "wgpu",
    "android-native-activity",
    "default_fonts",
] }
# Used to get same winit used by eframe.
egui-winit = { version = "0.31", default-features = false, features = [
    "clipboard",
    "links",
] }

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = { version = "0.31", default-features = false }
arboard = { version = "3.4.1", features = ["wl-clipboard-rs"] }


[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"
[[package.metadata.android.uses_permission]]
name = "android.permission.CHANGE_NETWORK_STATE"
[[package.metadata.android.uses_permission]]
name = "android.permission.RECORD_AUDIO"

[package.metadata.wix]
upgrade-guid = "E3D6696C-AEF5-422B-AFB2-608520166A3A"
path-guid = "F951758C-D6A4-4855-B5EE-8D14EAC48693"
license = false
eula = false
