[package]
name = "callme-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
async-channel = "2.3.1"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
iroh = { version = "0.33", default-features = false }
callme = { version = "0.1.0", path = "../callme" }
n0-future = "0.1.2"
serde = "1.0.217"
serde-wasm-bindgen = "0.6.5"
# we need to pin this because 0.1.10 moved to getrandom 0.3 which makes building for wasm harder
stun-rs = "=0.1.8"
tokio = { version = "1.43.0", default-features = false, features = ["sync"] }
tokio-stream = { version = "0.1.17", default-features = false, features = [
    "sync",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-subscriber-wasm = "0.1.0"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-streams = "0.4.2"
