[package]
name = "callme"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
async-channel = "2.3.1"
audio_thread_priority = "0.33.0"
bytes = "1.10.0"
cpal = { version = "0.15.3" }
dasp_sample = "0.11.0"
derive_more = { version = "2.0.1", features = ["debug", "deref"] }
fixed-resample = "0.6.1"
futures-concurrency = "7.6.3"
futures-util = "0.3.31"
iroh = { version = "0.33.0", default-features = false }
# iroh-roq = { git = "https://github.com/dignifiedquire/iroh-roq.git", version = "0.1.0" }
iroh-roq = "0.1.0"
n0-future = "0.1.2"
# opus = { package = "magnum-opus", version = "0.3" }
opus = { git = "https://github.com/DCNick3/opus-rs.git", branch = "unsafe-libopus", default-features = false, features = [
    "unsafe-libopus-backend",
] }
rand = "0.8"
rb = "0.4.1"
ringbuf = "0.4.7"
rubato = "0.16.1"
serde = { version = "1.0.218", features = ["derive"] }
spin_sleep = "1.3.0"
tokio = { version = "1.43.0", features = ["sync"] }
tokio-util = { version = "0.7.13", default-features = false }
tracing = "0.1.41"
# web-audio-api = { version = "1.2.0", default-features = false, features = [
#     "cpal",
#     "ogg",
# ] }
webrtc-audio-processing = { version = "0.4.0", features = [
    "bundled",
    "derive_serde",
] }
webrtc-media = "0.9.0"
# webrtc-audio-processing = { git = "https://github.com/tonarino/webrtc-audio-processing.git", branch = "upgrade-v2" }

[target.'cfg(target_os = "android")'.dependencies]
cpal = { version = "0.15.3", features = ["oboe-shared-stdcxx"] }

[target.'cfg(target_family = "wasm")'.dependencies]
cpal = { version = "0.15.3", features = ["wasm-bindgen"] }

[dev-dependencies]
clap = { version = "4.5.31", features = ["derive"] }
hound = "3.5.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"
# web-audio-api = { version = "1.2.0", default-features = false, features = [
#     "cpal",
#     "ogg",
#     "mp3",
# ] }
